Bug 34540 - Help Message Box is not resizeable and doesn't shows all information
Summary: Help Message Box is not resizeable and doesn't shows all information
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.1 RC1
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:4.1.0
Keywords:
: 46048 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-21 10:05 UTC by vohe
Modified: 2013-03-07 20:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the "help message" box on WindowsXp32bit (SP3) (28.14 KB, application/pdf)
2011-02-21 10:05 UTC, vohe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vohe 2011-02-21 10:05:07 UTC
Created attachment 43616 [details]
Screenshot of the "help message" box on WindowsXp32bit (SP3)

Hi,

as I start \pathtoLibreOffice\program\soffice.exe -h  under Windows i get a Message Box labeled Help Message.

This box shows me many commandline arguments that i can give LibreOffice at startup.

But as you can see in my attached file, the text get a little bit confused.
Some characters (or many i don't know) are cut of. And because the message box is not resizeable there is no way to get the information.

Regards
Volker
Comment 1 Rainer Bielefeld Retired 2011-06-23 06:00:19 UTC
[Reproducible] with "LibreOffice 3.4.1RC1  - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:101)]". Currently I see this as an UI problem.

@Tor:
Please feel free to reassign if it’s not your area or if provided information is not sufficient.
Comment 2 Don't use this account, use tml@iki.fi 2011-06-27 01:00:45 UTC
The relevant .src file location seems to be desktop/source/app/desktop.src, line 163. It would be an Easy Hack to enlarge this dialog.

But that is just a stopgap fix, of course. The sane thing would be to have the dialog resizable, or scrollable. Resizable dialogs in general is a much harder problem, and it certainly is not worth it to make just this dialog (which maybe one user in a thousand will even know to look for) resizable. As for making the dialog scrollable, well, why not then instead just have the -h start a normal LO text document window displaying a read-only copy of some suitable help document? 

And in fact, I would even say that this dialog is fairly useless. Only "power users" would think of running soffice.exe with a -h switch anyway, and they should know how to find out the command-line parameters acceptable in some other way, like in the help. (I hope the same information *is* present in the help? If not, that is then another bug, to be filed against the documentation.)

Rainer: you didn't actually assign to me, but that's OK, as I don't want this bug anyway;)
Comment 3 Björn Michaelsen 2011-12-23 13:23:06 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 4 Andras Timar 2012-04-23 10:10:21 UTC
*** Bug 46048 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2013-03-07 20:40:23 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d1285166cbc2fe1acd18e53e056c21145b60be1

fdo#34540 convert 'soffice --help' dialog on Windows to .ui



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.