fdo#34540 convert 'soffice --help' dialog on Windows to .ui

Change-Id: I4b3dc66534d1e0cfec371588840aa1c168e36f83