desktop/source/app/cmdlinehelp.hxx
@@ -31,11 +31,10 @@ namespace desktop
     public:
         CmdlineHelpDialog ( void );
 
-        FixedText   m_ftHead;
-        FixedText   m_ftLeft;
-        FixedText   m_ftRight;
-        FixedText   m_ftBottom;
-        OKButton    m_btOk;
+        FixedText*   m_pftHead;
+        FixedText*   m_pftLeft;
+        FixedText*   m_pftRight;
+        FixedText*   m_pftBottom;
     };
 #endif
 }
